fixed mobile filter overflow and mobile view conditions

--- a/css/styles.css
+++ b/css/styles.css
@@ -266,14 +266,16 @@ a.hover {
     background: #eee;
     padding: 4%;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
 }
 
 #mobile-panel-scroll {
-    position: absolute;
-    top: 20%;
-    width: 90%;
-    height: 77%;
-    overflow-y: scroll
+    /* position: absolute; */
+    /* top: 20%; */
+    /* width: 90%; */
+    /* height: 77%; */
+    overflow-y: scroll;
 }
 
 
@@ -289,13 +291,13 @@ a.hover {
 }
 
 #mobile-panel-filter {
-    margin: 0px;
+    margin: 12px;
     position: relative;
     /* border: 2px solid; */
-    padding: 1%;
-    width: 98%;
-    height: 14%;
-    overflow-y: scroll;
+    /* padding: 1%; */
+    /* width: 98%; */
+    height: 100px;
+    /* overflow-y: scroll; */
 }
 
 #mobile-panel-filter a {
